# baremetal_stm32

./: CMakeLists.txt  README.md  cmake.sh  main.c  main.h
device/: CMakeLists.txt  gcc_arm.ld
device/inc/: stm32f4xx.h  system_stm32f4xx.h
device/src/: startup_stm32f429.c  startup_stm32f429_old.c
drivers/: CMakeLists.txt
modules/: CMakeLists.txt
modules/inc/: core_clock.h  errors.h  i2c.h  i2s.h  serial.h  timer_util.h  wm8731.h
modules/src/: core_clock.c  i2c.c  i2s.c  serial.c  timer_util.c  wm8731.c
